--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
                         <a class="nav-link dropdown-toggle" href="#" id="categoryDropdown" data-toggle="dropdown" aria-expanded="false"> دسته‌بندی کالاها </a>
 
-                        <ul class="dropdown-menu mt-2 " aria-labelledby="categoryDropdown">
+                        <ul class="dropdown-menu mt-2 customMenu" aria-labelledby="categoryDropdown">
 
                             <!-- multilevel dropdown sample -->
                             <!-- <li class="dropdown dropright">
